--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&family=Koulen&family=Roboto:wght@100&display=swap');
+
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -10,4 +13,61 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+/* .App{
+  max-height: fit-content;
+  min-height: 100vh;
+} */
+
+.Description{
+  font-family: 'Koulen', cursive;
+  color: white;
+  height: 90vh;
+  max-width: 100%;
+  background-image: url("conny-schneider-xuTJZ7uD7PI-unsplash.jpg");
+  background-size: cover;
+  background-repeat: no-repeat;
+  line-height: 90vh;
+  text-align: center;
+}
+.Description h1{
+  line-height: 1.5;
+  font-size: 5rem;
+  display: inline-block;
+  vertical-align: middle;
+}
+.footer{
+  color: white;
+background-color: rgb(11, 1, 38);
+}
+.navigation{
+  background-color: rgba(113,194,248,50%);
+}
+
+
+/* Typing effect*/
+
+.typewriter h1 {
+  max-width: fit-content;
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid rgb(113,194,248); /* The typwriter cursor */
+  white-space: nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  letter-spacing: .30em; /* Adjust as needed */
+  animation: 
+    typing 7.5s steps(30, end),
+    blink-caret .75s step-end infinite;
+
+}
+
+/* The typing effect */
+@keyframes typing {
+  from { width: 0 }
+  to { width: 100% }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: rgb(113,194,248); }
 }
